# idp

./: .gitattributes  .license-tools-config.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE.md  README.md  UPGRADING.md  noxfile.py  pyproject.toml  sitecustomize.py
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cd.yml  ci.yml  templating.yml
docs/: CatStates.md  Encoders.md  StatePrep.md  ai_usage.md  cococo.md  conf.py  contributing.md  index.md  installation.md
scripts/: constructHGPcodes.py
scripts/cc_decoder/: run.sh  run_color_code_phenomenological_noise.py
scripts/cc_decoder/plotting/: plot_convergence_rate.ipynb  plots.py
scripts/cococo/: hill_climbing_examples.ipynb  layouts_general.ipynb  movable_qubit_router_examples.ipynb  plotting.py  snake_examples.ipynb
scripts/cococo/evaluations_beyond_the_surface_code/: circuit_types.py  circuit_types_q24_250718_c  evaluation.py  f_vs_t_q24_row_small.py  f_vs_time_q24_ratio08_small_row_250718_2_8_f_t_temp  f_vs_time_q24_ratio08_small_row_250718_2_8_f_t_temp_metricrouting  numerics_summarized.ipynb  test_evaluation.py
scripts/cococo/evaluations_movable_logical_qubits/fix_q_vary_depth/: circuit_depths_m10_n12_layoutsingle_sigma1_ncirc10_num_gates320_640_1280_2560_2025-11-09_usedagTrue_p.pkl  circuit_depths_m10_n6_layoutpair_sigma1_ncirc10_num_gates320_640_1280_2560_2025-11-09_usedagTrue_p.pkl  circuit_depths_m4_n5_layouthex_sigma1_ncirc10_num_gates320_640_1280_2560_2025-11-09_usedagTrue_p.pkl  circuit_depths_m4_n5_layouttriple_sigma1_ncirc10_num_gates320_640_1280_2560_2025-11-09_usedagTrue_p.pkl  generate_circuits_true_seq.py  redo_plots_table_output.py  true_seq_circs_j8_q120_numgates2560d320_x20.json  vary_depths_hex_251103.py
scripts/cococo/evaluations_movable_logical_qubits/vary_j/: vary_j_q60_numgates500_triple.py  varyj_layouttypetriple_q60_m2_n5_j2_3_4_5_10_15_20_25_30_numgates500_dvaries_ncirc10_2025-11-08_usedagTrue.pkl
scripts/examples/: atd_example.py  decoding-performance-simulations.py  readme_example.py  runtime-simulations.py
scripts/ft_stateprep/eval/: estimate_logical_error_rate.py  run_d7.py  run_eval_on_code.sh
scripts/ft_stateprep/eval_det/: eval.py  plot.ipynb
scripts/numerics/code_construct/: constructHGPcodes.py  constructLPcodes.py  constructToricCodes.py  lifted_hgp.py
scripts/numerics/visualize/: visualizeDecodingRuntime.py  visualizeWordErrRate.py
src/mqt/qecc/: __init__.py  _version.pyi
src/mqt/qecc/analog_information_decoding/code_construction/: code_constructor.py  compute_distances.sh  compute_distances_3D.sh  sparse_code_constructor.py
src/mqt/qecc/analog_information_decoding/simulators/: analog_tannergraph_decoding.py  memory_experiment_v2.py  quasi_single_shot_v2.py  simulation.py
src/mqt/qecc/analog_information_decoding/utils/: data_utils.py  simulation_utils.py
src/mqt/qecc/cc_decoder/: __init__.py  cli.py  decoder.py
src/mqt/qecc/cc_decoder/comparison/: tn_decoder.py
src/mqt/qecc/cc_decoder/stim_interface/: color_code_stim.py  dem_to_matrices.py  max_sat_sinter_decoder.py  max_sat_stim_decoder.py
src/mqt/qecc/circuit_synthesis/: __init__.py  cat_states.py  circuit_utils.py  circuits.py  definitions.py  encoding.py  faults.py  noise.py  non_css_faults.py  simulation.py  simulation_det.py  state_prep.py  state_prep_det.py  synthesis_utils.py
src/mqt/qecc/circuit_synthesis/stateprep_eval/circuits/rotated_surface_d3/: zero_non_ft_heuristic.stim
src/mqt/qecc/cococo/: __init__.py  circuit_construction.py  dag_helper.py  hill_climber.py  internal_testing.py  layouts.py  snake_builder.py  types.py  utils_routing.py
src/mqt/qecc/codes/: __init__.py  bb_codes.py  color_code.py  concatenation.py  constructions.py  css_code.py  hexagonal_color_code.py  pauli.py  rotated_surface_code.py  square_octagon_color_code.py  stabilizer_code.py  symplectic.py
test/python/: test_code.py
test/python/circuit_synthesis/: test_circuits.py  test_deterministic.py  test_encoder_synthesis.py  test_faults.py  test_noise.py  test_simulation.py  test_stateprep.py  test_utils.py  utils.py
tests/: __init__.py  test_code.py
tests/analog_info/: test_analog_tannergraph_decoding.py  test_memory_experiment.py  test_qss.py  test_simulation_utils.py  test_ss_simulation.py
tests/cc_decoder/: __init__.py  test_cc_decoder.py  test_color_code_stim.py  test_dem_to_matrices.py  test_max_sat_sinter_decoder.py  test_max_sat_stim_decoder.py  test_square_octagon_color_code.py  test_utils.py
tests/circuit_synthesis/: test_cat_states.py  test_circuits.py  test_deterministic.py  test_encoder_synthesis.py  test_faults.py  test_noise.py  test_simulation.py  test_stateprep.py  test_utils.py  utils.py
tests/cococo/: hx_desired_sc.csv  hx_desired_stdw.csv  hx_desired_steane.csv  hz_desired_sc.csv  hz_desired_stdw.csv  hz_desired_steane.csv  layouts_small_test.json  test_circuit_construction.py  test_hill_climber.py  test_lattice_router.py  test_layouts.py  test_snake_builder.py
