# Copyright (c) 2023 - 2026 Chair for Design Automation, TUM
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[build-system]
requires = [
  "hatchling>=1.27.0",
  "hatch-vcs>=0.4.0"
]
build-backend = "hatchling.build"

[project]
name = "mqt.qecc"
description = "QECC - An MQT Tool for Quantum Error Correcting Codes"
readme = "README.md"
authors = [
    { name = "Lucas Berent", email = "lucas.berent@tum.de" },
    { name = "Lukas Burgholzer", email = "lukas.burgholzer@tum.de" },
    { name = "Peter-Jan H. S. Derks", email = "peter-janderks@hotmail.com" },
    { name = "Timo Hillmann", email = "timo.hillmann@rwth-aachen.de"},
    { name = "Tom Peham", email = "tom.peham@tum.de" },
    { name = "Ludwig Schmid", email = "ludwig.s.schmid@tum.de" },
]
keywords = ["MQT", "quantum-computing", "error-correction", "MaxSAT", "QLDPC"]
license = "MIT"
license-files = ["LICENSE.md"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
  "qiskit[qasm3-import]>=1.0.0",
  "numpy>=1.24.1",
  "numpy>=1.26; python_version >= '3.12'",
  "numpy>=2.1; python_version >= '3.13'",
  "numba>=0.57",
  "numba>=0.59; python_version >= '3.12'",
  "numba>=0.61; python_version >= '3.13'",
  "scipy>=1.15.2",
  "z3-solver>=4.15.3",
  "multiprocess>=0.70.17",
  "ldpc>=2.3.10",
  "stim>=1.14.0",
  "pymatching>=2.2.2",
  "bposd>=1.6",
  "qecsim>=1.0b9",
  "sinter>=1.14.0",
  "tqdm>=4.66.2",
  "networkx>=3.4.2",
]
dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = ["src/mqt"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mqt/qecc/_version.py"

[project.optional-dependencies]
qsample = [
  "qsample>=0.0.2",
  "urllib3>=2.3.0",
  "fastcore>=1.8.1",
]

[project.urls]
Homepage = "https://github.com/munich-quantum-toolkit/qecc"
Documentation = "https://mqt.readthedocs.io/projects/qecc"
Issues = "https://github.com/munich-quantum-toolkit/qecc/issues"
Discussions = "https://github.com/munich-quantum-toolkit/qecc/discussions"

[project.scripts]
"mqt.qecc.cc-decoder" = "mqt.qecc.cc_decoder.cli:cli"
"mqt.qecc.cc-decoder-plot" = "mqt.qecc.cc_decoder.plots:main"


[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
strict = true
addopts = [
  "-ra",
  "--showlocals",
  "--numprocesses=auto", # Automatically use all available CPU cores for parallel testing
  "--dist=loadgroup", # Ensure that certain tests are run on the same worker
]
log_level = "INFO"
filterwarnings = [
  "error",
  "ignore:pkg_resources is deprecated:UserWarning", # Due to qsample, do not remove!
  "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.+'\\)`\\.:DeprecationWarning", # Due to qsample, do not remove!
  "ignore:.*The retworkx package is deprecated*:DeprecationWarning:pymatching",
  'ignore::DeprecationWarning:.*(simpleeval).*',
  # Qiskit 1.3 deprecations
  'ignore:.*``qiskit.dagcircuit.dagcircuit.DAGCircuit.*`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
  'ignore:.*``qiskit.circuit.instruction.Instruction.condition`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
  'ignore:.*Conditioned gates in qasm2 will be loaded as an IfElseOp starting in Qiskit 2.0.*:FutureWarning:',
  'ignore:.*``qiskit.circuit.singleton.*`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
  'ignore:.*``qiskit.circuit.instruction.Instruction.c_if.*`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
]

[tool.coverage]
run.source = ["mqt.qecc"]
run.disable_warnings = [
  "no-sysmon",
]
report.exclude_also = [
  '\.\.\.',
  'if TYPE_CHECKING:',
  'raise AssertionError',
  'raise NotImplementedError',
  'def __dir__()',  # Ignore __dir__ method that exists mainly for better IDE support
  '@overload'  # Overloads are only for static typing
]

[tool.mypy]
files = ["src/mqt", "tests", "noxfile.py"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src"]
python_version = "3.10"
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true
exclude = [
    "code_construction*",
    "^data_utils\\.py$"
]

[[tool.mypy.overrides]]
module = ["qiskit.*", "qecsim.*", "qiskit_aer.*", "matplotlib.*", "scipy.*", "ldpc.*", "pytest_console_scripts.*",
    "z3.*", "bposd.*", "numba.*", "pymatching.*", "stim.*", "multiprocess.*", "sinter.*", "qsample.*", "pandas.*", "tqdm.*", "networkx.*"]
ignore_missing_imports = true


[tool.check-wheel-contents]
ignore = ["W002"]  # Triggers on __init__.py's and duplicate data files


[tool.ruff]
line-length = 120
namespace-packages = ["mqt"]
preview = true
fix = true
unsafe-fixes = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "A",           # flake8-builtins
    "ANN",         # flake8-annotations
    "ARG",         # flake8-unused-arguments
    "ASYNC",       # flake8-async
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "D",           # pydocstyle
    "EM",          # flake8-errmsg
    "EXE",         # flake8-executable
    "FA",          # flake8-future-annotations
    "FLY",         # flynt
    "FURB",        # refurb
    "I",           # isort
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "LOG",         # flake8-logging-format
    "N",           # flake8-naming
    "NPY",         # numpy
    "PERF",        # perflint
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "PYI",         # flake8-pyi
    "Q",           # flake8-quotes
    "RET",         # flake8-return
    "RSE",         # flake8-raise
    "RUF",         # Ruff-specific
    "S",           # flake8-bandit
    "SLF",         # flake8-self
    "SLOT",        # flake8-slots
    "SIM",         # flake8-simplify
    "T20",         # flake8-print
    "TC",          # flake8-type-checking
    "TID251",      # flake8-tidy-imports.banned-api
    "TRY",         # tryceratops
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
ignore = [
    "ISC001",  # Conflicts with formatter
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
]
future-annotations = true

[tool.ruff.lint.isort]
known-first-party = ["mqt.qecc"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "ANN"]
"docs/**" = ["T20"]
"noxfile.py" = ["T20", "TID251"]
"*.pyi" = ["D"]  # pydocstyle
"*.ipynb" = [
    "D",    # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]
"*/cc_decoder/plots.py" = ["T201"]
"scripts/*" = ["T201"]
"lifted_hgp.py" = ["EXE002"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.typos]
[tool.typos.default.extend-words]
wille = "wille"
ser = "ser"
aer = "aer"
anc = "anc"
arange = "arange"
nd = "nd"


[tool.repo-review]
ignore = [
  "GH200", # We use Renovate instead of Dependabot
  "PC160", # We use a mirror of crate-ci/typos
]


[tool.uv]
required-version = ">=0.5.20"
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux'",
  "sys_platform == 'win32' and platform_machine != 'arm64'",
]

[tool.uv.sources]
mqt-qecc = { workspace = true }


[tool.check-sdist]
sdist-only = [
  "src/mqt/qecc/_version.py",
]

[dependency-groups]
docs = [
  "furo>=2025.09.25",
  "ipywidgets>=8.1.7",
  "myst-nb>=1.3.0",
  "setuptools-scm>=9.2.2",
  "sphinx>=8.1.3",
  "sphinx>=8.2.3; python_version >= '3.11'",
  "sphinx-autoapi>=3.6.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinxcontrib-bibtex>=2.6.5",
  "sphinxcontrib-svg2pdfconverter>=1.3.0",
  "sphinxext-opengraph>=0.13.0",
  "qiskit[qasm3-import,visualization]>=1.0.0",
]
test = [
  "pytest>=9.0.1",
  "pytest-console-scripts>=1.4.1",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.14.0",
  "pytest-sugar>=1.1.1",
  "pytest-xdist>=3.8.0",
]
dev = [
  {include-group = "test"},
  "nox>=2025.11.12",
]
